--- a/dashboard.html
+++ b/dashboard.html
@@ -139,9 +139,9 @@
                         <h3>Independence Era</h3>
                         <p>1990 - Present Day</p>
                         <div class="dashboard-category-stats">
-                            <span>12 Questions</span>
+                            <span>... Questions</span>
                             <span>•</span>
-                            <span>15 min</span>
+                            <span>... min</span>
                         </div>
                         <a href="quiz.html?category=independence" class="dashboard-btn-quiz">Start Quiz</a>
                     </div>
@@ -151,9 +151,9 @@
                         <h3>Colonial History</h3>
                         <p>1884-1990</p>
                         <div class="dashboard-category-stats">
-                            <span>15 Questions</span>
+                            <span>... Questions</span>
                             <span>•</span>
-                            <span>20 min</span>
+                            <span>... min</span>
                         </div>
                         <a href="quiz.html?category=colonial" class="dashboard-btn-quiz">Start Quiz</a>
                     </div>
@@ -163,21 +163,45 @@
                         <h3>Pre-Colonial Era</h3>
                         <p>Before 1884</p>
                         <div class="dashboard-category-stats">
-                            <span>10 Questions</span>
+                            <span>... Questions</span>
                             <span>•</span>
-                            <span>12 min</span>
+                            <span>... min</span>
                         </div>
                         <a href="quiz.html?category=precolonial" class="dashboard-btn-quiz">Start Quiz</a>
                     </div>
                     
                     <div class="dashboard-category-card">
+                        <i class="fas fa-fist-raised"></i>
+                        <h3>Liberation Struggles</h3>
+                        <p>1960s-1990</p>
+                        <div class="dashboard-category-stats">
+                            <span>... Questions</span>
+                            <span>•</span>
+                            <span>... min</span>
+                        </div>
+                        <a href="quiz.html?category=liberation" class="dashboard-btn-quiz">Start Quiz</a>
+                    </div>
+
+                    <div class="dashboard-category-card">
+                        <i class="fas fa-mask"></i>
+                        <h3>Culture & Heritage</h3>
+                        <p>Traditions & Customs</p>
+                        <div class="dashboard-category-stats">
+                            <span>... Questions</span>
+                            <span>•</span>
+                            <span>... min</span>
+                        </div>
+                        <a href="quiz.html?category=culture" class="dashboard-btn-quiz">Start Quiz</a>
+                    </div>
+
+                    <div class="dashboard-category-card">
                         <i class="fas fa-monument"></i>
                         <h3>Genocide & Resistance</h3>
                         <p>1904-1908 & Beyond</p>
                         <div class="dashboard-category-stats">
-                            <span>8 Questions</span>
+                            <span>... Questions</span>
                             <span>•</span>
-                            <span>10 min</span>
+                            <span>... min</span>
                         </div>
                         <a href="quiz.html?category=genocide" class="dashboard-btn-quiz">Start Quiz</a>
                     </div>
