--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
                         <a href="quiz.html?category=independence"><i class="fas fa-flag"></i> Independence Era</a>
                         <a href="quiz.html?category=colonial"><i class="fas fa-landmark"></i> Colonial History</a>
                         <a href="quiz.html?category=precolonial"><i class="fas fa-history"></i> Pre-Colonial</a>
+                        <a href="quiz.html?category=liberation"><i class="fas fa-fist-raised"></i> Liberation Struggles</a>
+                        <a href="quiz.html?category=culture"><i class="fas fa-mask"></i> Culture & Heritage</a>
                         <a href="quiz.html?category=genocide"><i class="fas fa-monument"></i> Genocide & Resistance</a>
                     </div>
                 </div>
@@ -100,6 +102,27 @@
                         <p>Before 1884</p>
                         <p class="card-description">Ancient civilizations, traditional kingdoms, and early cultures</p>
                         <a href="quiz.html" class="btn-quiz">Start Quiz</a>
+                    </div>
+                    <div class="category-card">
+                        <i class="fas fa-fist-raised"></i>
+                        <h3>Liberation Struggles</h3>
+                        <p>1960-1990</p>
+                        <p class="card-description">SWAPO, armed resistance, and the path to independence</p>
+                        <a href="quiz.html?category=liberation" class="btn-quiz">Start Quiz</a>
+                    </div>
+                    <div class="category-card">
+                        <i class="fas fa-mask"></i>
+                        <h3>Culture & Heritage</h3>
+                        <p>Traditional & Modern</p>
+                        <p class="card-description">Languages, traditions, art, and cultural practices</p>
+                        <a href="quiz.html?category=culture" class="btn-quiz">Start Quiz</a>
+                    </div>
+                    <div class="category-card">
+                        <i class="fas fa-monument"></i>
+                        <h3>Genocide & Resistance</h3>
+                        <p>1904-1908 & Beyond</p>
+                        <p class="card-description">Herero and Nama genocide, and early resistance movements</p>
+                        <a href="quiz.html?category=genocide" class="btn-quiz">Start Quiz</a>
                     </div>
                 </div>
             </div>
