--- a/quiz.html
+++ b/quiz.html
@@ -64,7 +64,7 @@
                 <!-- Main Navigation Items -->
                 <div class="dashboard-sidebar-main-nav">
                     <a href="dashboard.html" class="dashboard-sidebar-item">
-                        <i class="fas fa-home"></i>
+                        <i class="fas fa-tachometer-alt"></i>
                         <span>Dashboard</span>
                     </a>
                     
