--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                         <p>Historical Questions</p>
                     </div>
                     <div class="stat-item">
-                        <h3>4</h3>
+                        <h3>6</h3>
                         <p>Quiz Categories</p>
                     </div>
                     <div class="stat-item">
@@ -274,7 +274,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2025 Quizr - Namibian History Learning Platform. Educational Project.</p>
+            <p>&copy; 2025 Quizr - Namibian History Learning Platform.</p>
         </div>
     </footer>
 
