added JS links to HTML pages

--- a/forgot-password.html
+++ b/forgot-password.html
@@ -41,11 +41,6 @@
             </form>
         </div>
     </div>
-    <script>
-        document.querySelector('form').addEventListener('submit', function(e) {
-            e.preventDefault();
-            alert('Password reset link would be sent to your email!');
-        });
-    </script>
+    <script src="js/forgot-password.js"></script>
 </body>
 </html>
