--- a/results.html
+++ b/results.html
@@ -60,12 +60,22 @@
                 </div>
 
                 <!--Review Section-->
-                    
-
-
+                <div class="review-section">
+                    <a href="dashboard.html" class="btn btn-secondary"> 
+                    <i class="fas fa-tachometer-alt"></i> Back to Dashboard
+                    </a>
+                    <a href="leaderboard.html" class="btn btn-primary">
+                        <i class="fas fa-trophy"></i>View Leaderboard
+                    </a>
+                    <button id=" retryQuiz" class="btn btn-success">
+                        <i class="fas fa-redo"></i> Retry Quiz
+                    </button>
+                </div>
+            </section>        
         </main>
-
     </div>
     
+    <script src="js/results.js"></script>
+
 </body>
 </html>
