--- a/results.html
+++ b/results.html
@@ -61,6 +61,14 @@
 
                 <!--Review Section-->
                 <div class="review-section">
+                    <h2>Quiz Review</h2>
+                    <div class="review-list" id="reviewList">
+                        <!--Questions populated by PHP-->
+                    </div>
+                </div>
+
+                <!--Action Buttons-->
+                <div class="results-actions">
                     <a href="dashboard.html" class="btn btn-secondary"> 
                     <i class="fas fa-tachometer-alt"></i> Back to Dashboard
                     </a>
