--- a/results.html
+++ b/results.html
@@ -69,8 +69,7 @@
 
                 <!--Action Buttons-->
                 <div class="results-actions">
-                    <a href="dashboard.html" class="btn btn-secondary"> 
-                    <i class="fas fa-tachometer-alt"></i> Back to Dashboard
+                    <a href="dashboard.html" class="btn btn-secondary"> Back to Dashboard
                     </a>
                     <a href="leaderboard.html" class="btn btn-primary">
                         <i class="fas fa-trophy"></i>View Leaderboard
