Update Sidebar + Nav

--- a/leaderboard.html
+++ b/leaderboard.html
@@ -23,12 +23,6 @@
                 <span>Quizr</span>
             </div>
 
-            <div class="nav-center">
-                <a href="index.html"><i class="fas fa-home"></i> Home</a>
-                <a href="dashboard.html"><i class="fas fa-tachometer-alt"></i> Dashboard</a>
-                <a href="leaderboard.html" class="active"><i class="fas fa-trophy"></i> Leaderboard</a>
-            </div>
-
             <div class="nav-right">
                 <div class="dashboard-user-menu">
                     <span class="dashboard-user-name">Welcome, Student!</span>
@@ -57,14 +51,16 @@
                 <button class="dashboard-hamburger-menu" id="desktopHamburger">
                     <i class="fas fa-bars" id="desktopHamburgerIcon"></i>
                 </button>
-                <div class="logo">
-                    <span>Quizr</span>
-                </div>
             </div>
             
             <nav class="dashboard-sidebar-nav">
                 <!-- Main Navigation Items -->
                 <div class="dashboard-sidebar-main-nav">
+                    <a href="index.html" class="dashboard-sidebar-item" data-tooltip="Home">
+                        <i class="fas fa-home"></i>
+                        <span>Home</span>
+                    </a>
+
                     <a href="dashboard.html" class="dashboard-sidebar-item">
                         <i class="fas fa-tachometer-alt"></i>
                         <span>Dashboard</span>
