--- a/dashboard.html
+++ b/dashboard.html
@@ -20,12 +20,6 @@
                 <span>Quizr</span>
             </div>
 
-            <div class="nav-center">
-                <a href="index.html"><i class="fas fa-home"></i> Home</a>
-                <a href="dashboard.html" class="active"><i class="fas fa-tachometer-alt"></i> Dashboard</a>
-                <a href="leaderboard.html"><i class="fas fa-trophy"></i> Leaderboard</a>
-            </div>
-
             <div class="nav-right">
                 <div class="dashboard-user-menu">
                     <span class="dashboard-user-name">Welcome, Student!</span>
@@ -51,21 +45,19 @@
         <!-- Sidebar -->
         <aside class="dashboard-sidebar" id="sidebar">
             <div class="dashboard-sidebar-header">
-                <!-- Desktop hamburger (visible on larger screens) -->
                 <button class="dashboard-hamburger-menu" id="desktopHamburger">
                     <i class="fas fa-bars" id="desktopHamburgerIcon"></i>
-                </button>
-                <div class="logo">
-                    <span>Quizr</span>
-                </div>
-                <button class="dashboard-close-sidebar" id="closeSidebar">
-                    <i class="fas fa-times"></i>
                 </button>
             </div>
             
             <nav class="dashboard-sidebar-nav">
                 <!-- Main Navigation Items -->
                 <div class="dashboard-sidebar-main-nav">
+                    <a href="index.html" class="dashboard-sidebar-item" data-tooltip="Home">
+                        <i class="fas fa-home"></i>
+                        <span>Home</span>
+                    </a>
+
                     <a href="dashboard.html" class="dashboard-sidebar-item active" data-tooltip="Dashboard">
                         <i class="fas fa-tachometer-alt"></i>
                         <span>Dashboard</span>
