--- a/dashboard.html
+++ b/dashboard.html
@@ -22,11 +22,10 @@
 
             <div class="nav-right">
                 <div class="dashboard-user-menu">
-                    <span class="dashboard-user-name">Welcome, Student!</span>
+                    <span class="dashboard-user-name">Welcome, <span id="dashboardUserName">Student</span>!</span>
                     <div class="dashboard-user-dropdown">
                         <a href="profile.html"><i class="fas fa-user"></i> Profile</a>
-                        <a href="settings.html"><i class="fas fa-cog"></i> Settings</a>
-                        <a href="index.html"><i class="fas fa-sign-out-alt"></i> Logout</a>
+                        <a href="#" id="headerLogoutDashboard"><i class="fas fa-sign-out-alt"></i> Logout</a>
                     </div>
                 </div>
             </div>
