--- a/index.html
+++ b/index.html
@@ -34,9 +34,21 @@
                 <a href="#contact-section" class="smooth-scroll"><i class="fas fa-envelope"></i> Contact</a>
             </div>
 
-            <div class="nav-right">
-                <a href="login.html"><i class="fas fa-sign-in-alt"></i> Login</a>
-                <a href="register.html"><i class="fas fa-user-plus"></i> Sign Up</a>  
+            <div class="nav-right" id="authButtons">
+                <a href="login.html" class="auth-btn login-btn">
+                    <i class="fas fa-sign-in-alt"></i> Login
+                </a>
+                <a href="register.html" class="auth-btn signup-btn">
+                    <i class="fas fa-user-plus"></i> Sign Up
+                </a>  
+
+                <!--Logged in users-->
+                <div class="user-auth-section" style="display: none;">
+                    <span class="welcome-text">Welcome, <span id="userName">User</span></span>
+                    <a href="#" class="auth-btn logout-btn" id="headerLogout">
+                        <i class="fas fa-sign-out-alt"></i> Logout
+                    </a>
+                </div>
             </div>
         </nav>
     </header>
