getting the quiz from the database

--- a/index.html
+++ b/index.html
@@ -23,12 +23,13 @@
                 <div class="dropdown">
                     <a href="#" class="dropdown-toggle"><i class="fas fa-layer-group"></i> Categories <i class="fas fa-chevron-down"></i></a>
                     <div class="dropdown-menu">
-                        <a href="quiz.html?category=independence"><i class="fas fa-flag"></i> Independence Era</a>
-                        <a href="quiz.html?category=colonial"><i class="fas fa-landmark"></i> Colonial History</a>
-                        <a href="quiz.html?category=precolonial"><i class="fas fa-history"></i> Pre-Colonial</a>
-                        <a href="quiz.html?category=liberation"><i class="fas fa-fist-raised"></i> Liberation Struggles</a>
-                        <a href="quiz.html?category=culture"><i class="fas fa-mask"></i> Culture & Heritage</a>
-                        <a href="quiz.html?category=genocide"><i class="fas fa-monument"></i> Genocide & Resistance</a>
+                       <a href="quiz.html?category=independence">Independence Era</a>
+<a href="quiz.html?category=colonial">Colonial History</a>
+<a href="quiz.html?category=precolonial">Pre-Colonial Era</a>
+<a href="quiz.html?category=genocide">Genocide & Resistance</a>
+<a href="quiz.html?category=culture">Culture & Heritage</a>
+<a href="quiz.html?category=liberation">Liberation Struggles</a>
+
                     </div>
                 </div>
                 <a href="about.html"><i class="fas fa-info-circle"></i> About</a>
