--- a/quiz.html
+++ b/quiz.html
@@ -207,7 +207,7 @@
     </div>
 
     <!-- Simple script for sidebar functionality only -->
-    <script>
+    <script src="js/quiz.js">
         // Basic sidebar toggle functionality
         const mobileHamburger = document.getElementById('mobileHamburger');
         const desktopHamburger = document.getElementById('desktopHamburger');
