--- a/register.html
+++ b/register.html
@@ -65,7 +65,7 @@
             <a href="login.html" class="switch-btn">Sign In</a>
         </div>
     </div>
-    <script>
+   <script src="js/register.js">
     document.querySelector('form').addEventListener('submit', function(e) {
         e.preventDefault();
         
