--- a/dashboard.html
+++ b/dashboard.html
@@ -262,7 +262,7 @@
     <script type="module" src="js/dashboard.js"></script>
 
     <script>
-        // Basic sidebar functionality for results page
+        // Basic sidebar functionality 
         const mobileHamburger = document.getElementById('mobileHamburger');
         const desktopHamburger = document.getElementById('desktopHamburger');
         const sidebar = document.getElementById('sidebar');
