--- a/quiz.html
+++ b/quiz.html
@@ -102,7 +102,6 @@
                         </div>
                         <div class="quiz-stats">
                             <span class="question-counter">Question <span id="currentQuestionNumber">1</span> of <span id="totalQuestions">10</span></span>
-                            <span class="time-remaining">15:00</span>
                         </div>
                     </div>
                     
@@ -202,8 +201,9 @@
         </main>
     </div>
 
-    <!-- Simple script for sidebar functionality only -->
-    <script src="js/quiz.js">
+    <script src="js/quiz.js"></script>
+
+    <script>
         // Basic sidebar toggle functionality
         const mobileHamburger = document.getElementById('mobileHamburger');
         const desktopHamburger = document.getElementById('desktopHamburger');
