--- a/leaderboard.html
+++ b/leaderboard.html
@@ -156,8 +156,8 @@
         </main>
     </div>
     
-    <script src="js/leaderboard.js"></script>
-    <script>
+    
+    <script src="js/leaderboard.js">
         // Basic sidebar functionality
         const mobileHamburger = document.getElementById('mobileHamburger');
         const desktopHamburger = document.getElementById('desktopHamburger');
