--- a/login.html
+++ b/login.html
@@ -25,7 +25,7 @@
             <h2>Welcome Back!</h2>
             <form>
                 <div class="form-group">
-                    <input type="email" placeholder="Email or username" required />
+                    <input type="email" placeholder="Email" required />
                     <i class="fas fa-envelope"></i>
                 </div>
                 <div class="form-group">
@@ -60,6 +60,7 @@
         </div>
     </div>
 
-    <script type="module" src="js/login.js"></script>
+    <!-- Load login.js WITHOUT module type -->
+    <script src="js/login.js"></script>
 </body>
 </html>
