Admin button link added

--- a/dashboard.html
+++ b/dashboard.html
@@ -73,7 +73,7 @@
                     </a>
                 </div>
                 
-                <!-- Bottom Navigation Items (Settings & Profile) -->
+                <!-- Bottom Navigation(Settings & Profile) -->
                 <div class="dashboard-sidebar-bottom-nav">
                     <a href="profile.html" class="dashboard-sidebar-item" data-tooltip="Profile">
                         <i class="fas fa-user"></i>
