--- a/profile.html
+++ b/profile.html
@@ -62,7 +62,7 @@
                         <span>Dashboard</span>
                     </a>
                     
-                    <a href="#progress" class="dashboard-sidebar-item" data-tooltip="Progress" id="progressSidebarLink">
+                    <a href="#progress" class="dashboard-sidebar-item" id="admin-select"    data-tooltip="Progress" id="progressSidebarLink">
                         <i class="fas fa-chart-line"></i>
                         <span>Progress</span>
                     </a>
