--- a/leaderboard.html
+++ b/leaderboard.html
@@ -84,7 +84,7 @@
                         <span>Profile</span>
                     </a>
 
-                    <a href="admin/admin.html" class="dashboard-sidebar-item" data-tooltip="Admin">
+                    <a href="admin/admin.html" class="dashboard-sidebar-item" id="admin-select"  data-tooltip="Admin">
                         <i class="fas fa-cogs"></i>
                         <span>Admin Panel</span>
                     </a>
