--- a/quiz.html
+++ b/quiz.html
@@ -82,13 +82,7 @@
                         <span>Profile</span>
                     </a>
 
-                    <div class="dashboard-sidebar-bottom-nav">
-                    <a href="profile.html" class="dashboard-sidebar-item" data-tooltip="Profile">
-                        <i class="fas fa-user"></i>
-                        <span>Profile</span>
-                    </a>
-
-                    <a href="admin/admin.html" class="dashboard-sidebar-item" data-tooltip="Admin">
+                    <a href="admin/admin.html" class="dashboard-sidebar-item" id="admin-select"  data-tooltip="Admin">
                         <i class="fas fa-cogs"></i>
                         <span>Admin Panel</span>
                     </a>
@@ -97,13 +91,6 @@
                         <i class="fas fa-sign-out-alt"></i>
                         <span>Logout</span>
                     </a>
-                </div>
-
-                    <a href="index.html" class="dashboard-sidebar-item" data-tooltip="Logout" id="logoutSidebarLink">
-                        <i class="fas fa-sign-out-alt"></i>
-                        <span>Logout</span>
-                    </a>
-                </div>
             </nav>
         </aside>
        
