--- a/index.html
+++ b/index.html
@@ -287,6 +287,9 @@
     <footer>
         <div class="container">
             <p>&copy; 2025 Quizr - Namibian History Learning Platform.</p>
+            <p style="font-size: 0.7rem; opacity: 0.6; margin-top: 0.5rem;">
+                <a href="admin/admin-login.html" style="color: inherit; text-decoration: none;">Admin</a>
+            </p>
         </div>
     </footer>
 
