admin stuff and fixed dashboard

--- a/admin/admin-login.html
+++ b/admin/admin-login.html
@@ -41,6 +41,8 @@
         </div>
     </div>
 
-    <script src="js/admin-login.js"></script>
+    <script src="../admin/admin-login.js"></script>
 </body>
 </html>
+
+<!-- Email: admin@quizr.com-- Password: Admin@123-- (Change this after first login!)!>
