--- a/dashboard.html
+++ b/dashboard.html
@@ -112,7 +112,7 @@
                         </div>
                         <div class="dashboard-stat-card">
                             <i class="fas fa-fire"></i>
-                            <div>
+                            <div> 
                                 <h3 class="stat-streak">0</h3>
                                 <span>Day Streak</span>
                             </div>
@@ -259,7 +259,7 @@
         </main>
     </div>
 
-    <script type="module" src="js/dashboard.js"></script>
+   <script src="js/dashboard.js"></script>
 
     <script>
         // Basic sidebar functionality 
