--- a/admin/admin.html
+++ b/admin/admin.html
@@ -347,7 +347,8 @@
         </main>
     </div>
 
-    <script type="module" src="../js/dashboard.js"></script>
+  <!-- Remove type="module" from dashboard.js -->
+    <script src="../js/dashboard.js"></script>
     <script src="js/admin.js"></script>
     
     <script>
