--- a/dashboard.html
+++ b/dashboard.html
@@ -99,7 +99,7 @@
                         <div class="dashboard-stat-card">
                             <i class="fas fa-check-circle"></i>
                             <div>
-                                <h3 class="stat-completed">0</h3>
+                                <h3 class="stat-completed">1</h3>
                                 <span>Quizzes Completed</span>
                             </div>
                         </div>
@@ -113,7 +113,7 @@
                         <div class="dashboard-stat-card">
                             <i class="fas fa-fire"></i>
                             <div> 
-                                <h3 class="stat-streak">0</h3>
+                                <h3 class="stat-streak">1</h3>
                                 <span>Day Streak</span>
                             </div>
                         </div>
@@ -224,35 +224,12 @@
 
                 <!-- Progress View -->
                 <div class="progress-view" id="progressView">
-                    <!-- Overall Progress -->
-                    <div class="overall-progress">
-                        <h4>Overall Learning Progress</h4>
-                        <div class="progress-summary">
-                            <div class="progress-metric">
-                                <span class="metric-value">0%</span>
-                                <span class="metric-label">Mastery Level</span>
-                            </div>
-                            <div class="progress-metric">
-                                <span class="metric-value">0</span>
-                                <span class="metric-label">Quizzes Taken</span>
-                            </div>
-                            <div class="progress-metric">
-                                <span class="metric-value">0</span>
-                                <span class="metric-label">Day Streak</span>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- Category Progress -->
-                    <div class="category-progress">
-                        <h4>Your Category Progress</h4>
-                        <div class="progress-list" id="progressList">
-                            <div class="empty-progress">
-                                <i class="fas fa-chart-line"></i>
-                                <p>No quizzes completed yet</p>
-                                <small>Start learning to see your progress here</small>
-                            </div>
-                        </div>
+    <!-- Coming Soon -->
+                    <div class="empty-progress">
+                        <i class="fas fa-tools" style="color: #667eea;"></i>
+                        <h3>Progress Tracking Coming Soon</h3>
+                        <p>We're working on bringing you detailed progress analytics!</p>
+                        <small>Every quiz you take now is building your foundation for success!</small>
                     </div>
                 </div>
             </section>
