--- a/profile.html
+++ b/profile.html
@@ -133,7 +133,7 @@
                             <div class="stat-item">
                                 <i class="fas fa-check-circle"></i>
                                 <div>
-                                    <h4 id="profileQuizzesCompleted">0</h4>
+                                    <h4 id="profileQuizzesCompleted">1</h4>
                                     <span>Quizzes Completed</span>
                                 </div>
                             </div>
@@ -147,7 +147,7 @@
                             <div class="stat-item">
                                 <i class="fas fa-fire"></i>
                                 <div>
-                                    <h4 id="profileStreak">0</h4>
+                                    <h4 id="profileStreak"></h4>
                                     <span>Day Streak</span>
                                 </div>
                             </div>
