--- a/dashboard.html
+++ b/dashboard.html
@@ -224,10 +224,10 @@
 
                 <!-- Progress View -->
                 <div class="progress-view" id="progressView">
-    <!-- Coming Soon -->
+                    <!-- Coming Soon Message -->
                     <div class="empty-progress">
-                        <i class="fas fa-tools" style="color: #667eea;"></i>
-                        <h3>Progress Tracking Coming Soon</h3>
+                        <i class="fas fa-chart-line" style="color: #667eea; font-size: 3rem; margin-bottom: 1rem;"></i>
+                        <h3>Progress Tracking</h3>
                         <p>We're working on bringing you detailed progress analytics!</p>
                         <small>Every quiz you take now is building your foundation for success!</small>
                     </div>
